--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
+    "bootstrap": "^5.3.3",
     "pinia": "^3.0.1",
     "sass": "^1.85.1",
     "vue": "^3.5.13",
